otus-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otus
  labels:
    name: otus
